--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -9,7 +9,7 @@
   font-family: Arial, sans-serif;
   background-color: #fff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 20px auto;
+  margin: 20px auto 0;
 }
 
 .profile img {
